# VoxMiM

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_EN.md  ROADMAP.md  SESSIONS.md  TECHNICAL_SPECIFICATION.md  build.rs  opencode.json  summary.md
.opencode/skills/docs-only/: SKILL.md
.opencode/skills/rust-api-first/: SKILL.md
.opencode/skills/rust-autosave/: SKILL.md
.opencode/skills/rust-encoding/: SKILL.md
.opencode/skills/rust-file-sizes/: SKILL.md
.opencode/skills/rust-github/: SKILL.md
.opencode/skills/rust-localization/: SKILL.md
.opencode/skills/rust-project-structure/: SKILL.md
.opencode/skills/rust-quick-launch/: SKILL.md
.opencode/skills/rust-single-source/: SKILL.md
.opencode/skills/rust-versioning/: SKILL.md
assets/: цвет иконки.txt
dicts/: hallucinations.txt  user_dict.json
lang/: en.json  ru.json
resource/: resource.rc
settings/: Cargo.toml  build.rs
settings/resource/: resource.rc
settings/src/: main.rs
src/: app.rs  config.rs  debug_log.rs  download.rs  lang.rs  main.rs  pipe.rs
src/audio/: capture.rs  mod.rs  noise_filter.rs  processor.rs  ring_buffer.rs
src/commands/: executor.rs  math.rs  mod.rs
src/input/: hotkeys.rs  inserter.rs  mod.rs  simulation.rs
src/stt/: engine.rs
src/text/: aliases.rs  dictionary.rs  hallucinations.rs  mod.rs  punctuation.rs  repetitions.rs  space_fixer.rs  user_dict.rs
src/ui/: dialog.rs  mod.rs  settings.rs  settings.slint  tray.rs
src/vad/: detector.rs
