[package]
name = "voxmim"
version = "0.5.0"
edition = "2024"
description = "Голосовой ввод текста на Rust. Порт VoxBee с исправлением разорванных слов."
license = "GPL-3.0"
authors = ["DevZu"]

[features]
default = []
gpu-cuda = []
gpu-vulkan = []
gpu-all = ["gpu-cuda", "gpu-vulkan"]

[dependencies]
cpal = "0.15"
# webrtc-audio-processing = { version = "2", features = ["bundled"] }
# whisper-rs = "0.16"
regex = "1"
# tray-icon = "0.24" — заменён на win32 API в ui/tray.rs
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_DataExchange",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_Globalization",
    "Win32_Storage_FileSystem",
]} 
enigo = "0.6"
rdev = "0.5"
# tray-icon — заменён на win32 API в ui/tray.rs
egui = "0.30"
eframe = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"
image = "0.25"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"

[build-dependencies]
embed-resource = "3.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
